--- a/documents/Rapport/abstract.tex
+++ b/documents/Rapport/abstract.tex
@@ -6,7 +6,7 @@
 
 \begin{spacing}{1.3}
 
-L'étude de filiation des espèces, phylogénie est un domaine de recherche utilisant des arbres parcimonieux. Par le passé, H.J. Bandelt \cite{MedianAlgebras}\cite{MedianJoiningNetworks} a mis en avant l'avantage qu'il y a à encoder l'ensemble des informations dans un unique graphe médian regroupant l'ensemble de ces arbres phylogénétiques en même temps. Puis ce fut au tour d'U. Priss \cite{MedianConceptLattices} de présenter l'avantage de cette vision qui permettrait de donner à la phylogénie accès aux méthodes de l'analyse de concepts formels. De plus elle donne un point de départ de méthode permettant afin de passer d'un treillis construit à partir de la matrice de données source des arbres, en un graphe médian. Ce travail a été poursuivis et explicité en un algorithme pour les cas simple par l'équipe ORPAILLEUR\cite{egc2018}\cite{cla2018}. Mon travail présenté dans ce dossier va porter sur le prolongement de ces travaux pour leur mise en place dans un programme et leur amélioration pour la prise en compte de cas un peu plus complexes.
+L'étude de filiation des espèces, la phylogénie, est un domaine de recherche utilisant des arbres parcimonieux. Par le passé, H.J. Bandelt \cite{MedianAlgebras}\cite{MedianJoiningNetworks} a mis en avant l'avantage qu'il y a à encoder l'ensemble des informations dans un unique graphe médian regroupant l'ensemble de ces arbres phylogénétiques. Puis ce fut au tour d'U. Priss \cite{MedianConceptLattices} de présenter l'avantage de cette vision qui permettrait de donner à la phylogénie accès aux méthodes de l'analyse de concepts formels. De plus elle donne un point de départ de méthode permettant afin de passer d'un treillis construit à partir de la matrice de données source des arbres, en un graphe médian. Ce travail a été poursuivi et explicité en un algorithme pour les cas simples par l'équipe ORPAILLEUR\cite{egc2018}\cite{cla2018}. Mon travail va porter sur le prolongement de ces travaux pour leur mise en place dans un programme et leur amélioration pour la prise en compte de cas un peu plus complexes.
 
 \end{spacing}
 \end{abstract}
