--- a/documents/Rapport/remerciements.tex
+++ b/documents/Rapport/remerciements.tex
@@ -9,7 +9,7 @@
 
 Avant de débuter ce rapport, il me semble judicieux de remercier tous ceux et celles qui m’ont permis de réaliser ce stage dans ces conditions.
 \bigbreak
-Je commencerai par Miguel Couceiro, Alain Gely et Amedeo Napoli, mes tuteurs qui m’ont accepté au sein du projet et qui m’ont accompagné tout au long de la réalisation de ma contribution et de l'écriture de ce rapport qui fut loin d'être une simple banalité pour moi.
+Je commencerai par Miguel Couceiro, Alain Gely et Amedeo Napoli, mes tuteurs qui m’ont accepté au sein du projet et qui m’ont accompagné tout au long de la réalisation de ma contribution et de l'écriture de ce rapport.
 \bigbreak
 Je remercierai également Mme. Bourjot, ma marraine qui a effectué le suivi et l’encadrement de mon stage.
 \bigbreak
