--- a/documents/Rapport/contexte.tex
+++ b/documents/Rapport/contexte.tex
@@ -26,4 +26,4 @@ Le domaine de recherche de l'équipe est l'exploration de connaissances dans les
 
 \bigbreak
 
-Son nom vient de la comparaison que nous pouvons faire entre son activité et la recherche d'or. En effet en associant la présence d'or en tant qu'unités de connaissances et les données du terrain en tant que base de données, on obtient l'activité de l'équipe sur les données.
+Son nom vient de la comparaison entre son activité et la recherche d'or. En effet en associant la présence d'or en tant qu'unités de connaissances et les données du terrain en tant que base de données, on obtient l'activité de l'équipe sur les données.
